--- a/session 2/layout1.html
+++ b/session 2/layout1.html
@@ -11,25 +11,14 @@
 <body>  
 <div id="main">
     <div id="header">
-        <div id="logo">
-            LOGO       
-        </div id="banner">
-            BANNER
+        <div id="logo">LOGO       
+        </div id="banner">BANNER
     </div>
-    <div id="menu">
-        MENU
-    </div>
-    <div id="left">
-        LEFT
-    </div>
-    <div id="content">
-        CONTENT
-    </div>
-    <div id="right">
-        RIGHT
-    </div>
-    <div id="footer">
-        FOOTER
+    <div id="menu">MENU</div>
+    <div id="left">LEFT</div>
+    <div id="content">CONTENT</div>
+    <div id="right">RIGHT</div>
+    <div id="footer">FOOTER
 </div>
 </body> 
 </html>                     
