--- a/session 5/bttb.html
+++ b/session 5/bttb.html
@@ -16,21 +16,21 @@
     <div id="body">
             <h2> 2011-2012 guest speakers </h2>
                 <ul>
-                    <li> October 19, 2011: <span class="line">Jeffrey Toobin</span></li>
-                    <li> November 16, 2011: <span class="line"> Andrew Ross Sokin </span></li>
-                    <li> January 18, 2012: <a class="date" href ="#"> Amy Chua </a> </li>
-                    <li> February 18, 2012: <a class="date" href ="#"> Scott Sampson </a> </li>
-                    <li> March 21, 2012: <a class="date" href ="#"> Carlos Eire </a> </li>
-                    <li> April 18, 2012: <a class="date" href ="#"> Ronan Tynan </a> </li>
+                    <li> October 19, 2011: <span class="line" style="text-decoration: underline">Jeffrey Toobin</span></li>
+                    <li> November 16, 2011: <span class="line" style="text-decoration: underline"> Andrew Ross Sokin </span></li>
+                    <li> January 18, 2012: <a href ="#" class="date" style="color:green"> Amy Chua </a> </li>
+                    <li> February 18, 2012: <a href ="#" class="date" style="color:green"> Scott Sampson </a> </li>
+                    <li> March 21, 2012: <a href ="#" class="date" style="color:green"> Carlos Eire </a> </li>
+                    <li> April 18, 2012: <a href ="#"class="date" style="color:green"> Ronan Tynan </a> </li>
                 </ul>
             <h3> Looking for a unique gift? </h3>
             <p >Town hail has the answer. For only $100 you can get a book of the remaining speaker. And the bargan includes a second book of ticket for a copanion. </p>
-            <p class="sentence"> Or, for $50, you can give yourself the gift of our speaker, and still get an extra ticket for a companion, but for just one of the event. </p>
-            <p class="sentence"> See you at the next show? </p>
+            <p class="sentence" style="text-indent: 50px"> Or, for $50, you can give yourself the gift of our speaker, and still get an extra ticket for a companion, but for just one of the event. </p>
+            <p class="sentence" style="text-indent: 50px"> See you at the next show? </p>
             <p> Contact us by phone at (559) 555-1212 for ticket information. </p>
     </div>
     <div id="footer"> 
-    &regCompany 2012 San Joaquin Valley Town Hall</div>
+    &reg Company 2012 San Joaquin Valley Town Hall</div>
     </div>
 </body> 
 </html>     
