--- a/session 9/example2.html
+++ b/session 9/example2.html
@@ -8,16 +8,13 @@
 	<div id="left">
 		<h1> Login </h1>
 		<form name="Login" action="#" method="POST">
-			<p> Username or email address*:
-				<br>
+			<p> Username or email address*:<br>
 				<input type="text" name="username-email">
 			</p>
-			<p> Password*:
-				<br>
+			<p> Password*:<br>
 				<input type="password" name="password">
 			</p>
-			<p> LOGIN:
-				<br>
+			<p> LOGIN:<br>
 				<input type="checkbox" name="Remember me"> Remember me
 			</p>
 			<ul>
@@ -28,20 +25,16 @@
 	<div id="right">
 		<h1> Register </h1>
 		<form name="Register" action="#" method="POST">
-			<p> Phone:
-				<br>
+			<p> Phone:<br>
 				<input type="number" name="phone">
 			</p>
-			<p> First name*:
-				<br>
+			<p> First name*:<br>
 				<input type="password" name="first-name">
 			</p>
-			<p> Last name*:
-				<br>
+			<p> Last name*:<br>
 				<input type="password" name="last-name">
 			</p>
-			<p> Password*:
-				<br>
+			<p> Password*:<br>
 				<input type="password" name="password">
 			</p>
 			<p> REGISTER </p>
