--- a/session 9/formlogin.html
+++ b/session 9/formlogin.html
@@ -11,7 +11,7 @@
 	<h1 class="title"> Register Login Widget </h1>
 	<div class="left">
 		<form name="login" method="post" action="#">
-			<h1> Login </h1>
+			<h2> Login </h1>
 			<input type="text" name="email" id="email" placeholder="E-mail">
 			<input type="password" name="password" id="password" placeholder="Password">
 			<button class="radius" type="button"> LOGIN NOW </button>
@@ -32,7 +32,7 @@
 	</div>
 	<div class="right">
 		<form name="register" method="post" action="#">
-			<h1> Register </h1>
+			<h2> Register </h1>
 			<input type="text" name="email-register" id="email-register" placeholder="E-mail">
 				<input type="text" name="username" id="username" placeholder="Username">
 				<input type="password" name="password" placeholder="Password">
@@ -43,7 +43,7 @@
 			<p style="margin-top: 20px;"> By clicking register. I agree to your terms </p>
 		</form>
 	</div>
-	<div class="bottom">
+	<div class="footer">
 		<p> &copy 2016 Register Login Widget. All rights reserved I Design by W3layouts </p>
 	</div>
 </body>
