--- a/session 9/formlogin.html
+++ b/session 9/formlogin.html
@@ -40,7 +40,7 @@
 			<div class="button">
 				<button class="radius" type="button"> REGISTER </button>
 			</div>
-			<p style="margin-top: 20px;"> By clicking register. I agree to your terms </p>
+			<p class="margin"> By clicking register. I agree to your terms </p>
 		</form>
 	</div>
 	<div class="footer">
